--- a/index.html
+++ b/index.html
@@ -70,7 +70,64 @@
                 <p>Task Pulse helps you manage your tasks, boost productivity, and achieve your goals with a simple yet
                     powerful task management platform. Whether you're organizing daily chores or planning long-term
                     projects, we've got you covered.</p>
-                <input type="button" value="Sign Up" />
+                <a href="#"><input type="button" value="Sign Up"></a>
+            </section>
+            <section class="highlights content">
+                <h3>Highlighted Features</h3>
+                <ul>
+                    <li>
+                        <p>Manage tasks efficiently with our intuitive task list interface.</p>
+                        <input type="button" value="Tasks">
+                    </li>
+                    <li>
+                        <p>Boost your focus with timed work sessions.</p>
+                        <input type="button" value="Promodoro">
+                    </li>
+                    <li>
+                        <p>Visualize your progress with daily, weekly, and monthly charts.</p>
+                    </li>
+                    <li>
+                        <p>Customize task categories, themes, and alerts to suit your needs.</p>
+                    </li>
+                </ul>
+            </section>
+            <section class="whychoose content">
+                <h3>Why Choose Task Pulse?</h3>
+                <ol type="a">
+                    <li>Efficiency: "Organize, prioritize, and complete tasks faster."</li>
+                    <li>Flexibility: "Adaptable to any workflow, whether you’re a student, professional, or hobbyist."
+                    </li>
+                    <li>Productivity Tools: "Built-in Pomodoro timer and progress charts to keep you on track."</li>
+                </ol>
+            </section>
+            <section class="featuredTask content">
+                <h3>Tasks of the day</h3>
+                <em class="todayDate">2024/10/06</em>
+                <ol type="1">
+                    <li>Wash dishes</li>
+                    <li>Complete Homework</li>
+                    <li>Play 2 rounds of gameplay</li>
+                </ol>
+            </section>
+            <section class="testimonials content">
+                <h3>testimonials User Reviews</h3>
+                <div class="reveiws">
+                    <div>
+                        <h4>Prajwol Prasai</h4>
+                        <p>This is the best. I've always found hard and struggled to keep track of my tasks. But this
+                            site helped me allat like magic.</p>
+                    </div>
+                    <div>
+                        <h4>Niroj Thagunna</h4>
+                        <p>The tasks which are untracked always make me overwhelemed. Despite having low attention span
+                            this site directed toward consistency and discipline. I am taking my time and writting this
+                            reveiw as a proof.</p>
+                    </div>
+                    <div>
+                        <h4>Aayush Rai</h4>
+                        <p>This is what I definetely wanted. ....</p>
+                    </div>
+                </div>
             </section>
 
         </div>
@@ -78,6 +135,12 @@
     </main>
 
     <footer>
+        <div class="contact">
+            <h3>Contact Us</h3>
+            <a href="#">Facebook</a>
+            <a href="#">Linkedin</a>
+            <a href="#">Github</a>
+        </div>
         <p>&copy;2024 All rights reserved</p>
     </footer>
     <script src="/scripts/slider.js"></script>
