--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Task Pulse</title>
     <link rel="stylesheet" href="./styles/nav.css">
     <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="./styles/footer.css">
 </head>
 
 <body>
@@ -135,13 +137,20 @@
     </main>
 
     <footer>
-        <div class="contact">
-            <h3>Contact Us</h3>
-            <a href="#">Facebook</a>
-            <a href="#">Linkedin</a>
-            <a href="#">Github</a>
+        <div class="social-links">
+            <h3>Social Links</h3>
+            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+            <a href="#" aria-label="Github"><i class="fab fa-github"></i></a>
         </div>
-        <p>&copy;2024 All rights reserved</p>
+        <div class="contact-us">
+            <h3>contact-us</h3>
+            <p>bikramgharti39@gmail.com</p>
+        </div>
+        <div class="copyright">
+
+            <p>&copy;2024 All rights reserved</p>
+        </div>
     </footer>
     <script src="/scripts/slider.js"></script>
 
