trial and error

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                 <button id="prev">&gt;</button>
             </div>
         </section>
+        <article>
+            <img src="/public/images/adventuretime.png" alt="adventuretime">
+        </article>
         <div class="contents">
             <section class="welcome">
 
@@ -152,7 +155,7 @@
             <p>&copy;2024 All rights reserved</p>
         </div>
     </footer>
-    <script src="/scripts/slider.js"></script>
+    <script src="./scripts/slider.js"></script>
 
 </body>
 
