--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
         </section>
         <article>
-            <img src="/public/images/adventuretime.png" alt="adventuretime">
+            <img src="/images/adventuretime.png" alt="adventuretime">
         </article>
         <div class="contents">
             <section class="welcome">
