--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
 </head>
 
 <body>
+
+    <div class="phoneNav">
+        <div class="phoneLeft">
+            <a href="/">Home</a>
+            <input type="button" value="Tasks">
+            <input type="button" value="Promodoro">
+
+        </div>
+
+        <div class="dropdown">
+            <button id="dropdownButton"><img src="../public/hamburger.png" alt="hamburger"></button>
+            <div id="dropdownContent" class="dropdown-content hiddenDrop">
+                <a href="#">About Us</a>
+                <a href="signup"><input type="button" value="Sign Up" name="signup"></a>
+                <a href="login"><input type="button" value="Login" name="signup"></a>
+            </div>
+        </div>
+    </div>
     <nav>
         <div class="left">
             <a href="/">Home</a>
@@ -133,6 +151,7 @@
                 </div>
             </section>
 
+
         </div>
 
     </main>
@@ -154,6 +173,7 @@
         </div>
     </footer>
     <script src="./scripts/slider.js"></script>
+    <script src="./scripts/dropdownBox.js"></script>
 
 </body>
 
