--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="dropdown">
-            <button id="dropdownButton"><img src="../public/hamburger.png" alt="hamburger"></button>
+            <button id="dropdownButton"><img src="../public/hamburger.png" alt="="></button>
             <div id="dropdownContent" class="dropdown-content hiddenDrop">
                 <a href="#">About Us</a>
                 <a href="signup"><input type="button" value="Sign Up" name="signup"></a>
