--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <div class="phoneNav">
         <div class="phoneLeft">
             <a href="/">Home</a>
-            <input type="button" value="Tasks">
-            <input type="button" value="Promodoro">
-
+            <a href="./html/todoList.html">Tasks</a>
+            <a href="#">Promodoro</a>
         </div>
 
         <div class="dropdown">
@@ -33,8 +32,8 @@
     <nav>
         <div class="left">
             <a href="/">Home</a>
-            <input type="button" value="Tasks">
-            <input type="button" value="Promodoro">
+            <a href="./html/todoList.html">Tasks</a>
+            <a href="#">Promodoro</a>
             <a href="#">About us</a>
         </div>
         <div class="right">
@@ -42,7 +41,7 @@
             <a href="login"><input type="button" value="Login" name="signup"></a>
         </div>
     </nav>
-    <main>
+    <main id="main">
         <section class="slider-wrapper">
             <div class="slides" id="slider">
                 <div class="slide" id="slide1">
@@ -98,11 +97,10 @@
                 <ul>
                     <li>
                         <p>Manage tasks efficiently with our intuitive task list interface.</p>
-                        <input type="button" value="Tasks">
-                    </li>
+                        <a href="./html/todoList.html">Tasks</a>                                </li>
                     <li>
                         <p>Boost your focus with timed work sessions.</p>
-                        <input type="button" value="Promodoro">
+                        <a href="#">Promodoro</a>
                     </li>
                     <li>
                         <p>Visualize your progress with daily, weekly, and monthly charts.</p>
