why path are getting incorrecttt?

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="phoneNav">
         <div class="phoneLeft">
-            <a href="/">Home</a>
+            <a href="../index.html">Home</a>
             <a href="./html/todoList.html">Tasks</a>
             <a href="#">Promodoro</a>
         </div>
@@ -97,7 +97,8 @@
                 <ul>
                     <li>
                         <p>Manage tasks efficiently with our intuitive task list interface.</p>
-                        <a href="./html/todoList.html">Tasks</a>                                </li>
+                        <a href="./html/todoList.html">Tasks</a>
+                    </li>
                     <li>
                         <p>Boost your focus with timed work sessions.</p>
                         <a href="#">Promodoro</a>
