--- a/html/todoList.html
+++ b/html/todoList.html
@@ -31,7 +31,7 @@
     </div>
     <nav>
         <div class="left">
-            <a href="/">Home</a>
+            <a href="../index.html">Home</a>
             <a href="./todoList.html">Tasks</a>
             <a href="#">Promodoro</a>
             <a href="#">About us</a>
@@ -76,7 +76,7 @@
                 <input type="text" placeholder="Task assigned to" name="task-assigned" id="task-assigned">
                 <input type="submit" value="Add">
             </form>
-            
+
         </div>
         <div id="displayTasks">
 
