--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <nav>
         <div class="left">
-            <a href="/">Home</a>
+            <a href="../index.html">Home</a>
             <a href="./html/todoList.html">Tasks</a>
             <a href="#">Promodoro</a>
             <a href="#">About us</a>
