i guess path is fixed finally

--- a/html/todoList.html
+++ b/html/todoList.html
@@ -15,7 +15,7 @@
 <body>
     <div class="phoneNav">
         <div class="phoneLeft">
-            <a href="../index.html">Home</a>
+            <a href="./index.html">Home</a>
             <a href="./html/todoList.html">Tasks</a>
             <a href="#">Promodoro</a>
         </div>
@@ -31,7 +31,7 @@
     </div>
     <nav>
         <div class="left">
-            <a href="../index.html">Home</a>
+            <a href="./index.html">Home</a>
             <a href="./todoList.html">Tasks</a>
             <a href="#">Promodoro</a>
             <a href="#">About us</a>
