--- a/html/todoList.html
+++ b/html/todoList.html
@@ -15,7 +15,7 @@
 <body>
     <div class="phoneNav">
         <div class="phoneLeft">
-            <a href="./index.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="./html/todoList.html">Tasks</a>
             <a href="#">Promodoro</a>
         </div>
