--- a/html/todoList.html
+++ b/html/todoList.html
@@ -43,7 +43,9 @@
     </nav>
 
     <main>
-        <aside class="aside">
+        <button id="asideBar"> <i class="fas fa-bars"></i></button>
+
+        <aside class="showAside aside">
             <div class="profile">
                 <img src="../public/guest-avatar.jpg" alt="profilePic">
                 <p>Guest</p>
