--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <div class="phoneLeft">
             <a href="./index.html">Home</a>
             <a href="./html/todoList.html">Tasks</a>
-            <a href="#">Promodoro</a>
+            <a href="./html/404.html">Promodoro</a>
         </div>
 
         <div class="dropdown">
             <button id="dropdownButton"> <i class="fas fa-bars"></i></button>
             <div id="dropdownContent" class="dropdown-content hiddenDrop">
-                <a href="#">About Us</a>
-                <a href="signup"><input type="button" value="Sign Up" name="signup"></a>
-                <a href="login"><input type="button" value="Login" name="signup"></a>
+                <a href="./html/about-us.html">About Us</a>
+                <a href="./html/sign-up.html"><input type="button" value="Sign Up" name="signup"></a>
+                <a href="./html/login.html"><input type="button" value="Login" name="signup"></a>
             </div>
         </div>
     </div>
@@ -33,12 +33,12 @@
         <div class="left">
             <a href="./index.html">Home</a>
             <a href="./html/todoList.html">Tasks</a>
-            <a href="#">Promodoro</a>
-            <a href="#">About us</a>
+            <a href="./html/404.html">Promodoro</a>
+            <a href="./html/about-us.html">About us</a>
         </div>
         <div class="right">
-            <a href="signup"><input type="button" value="Sign Up" name="signup"></a>
-            <a href="login"><input type="button" value="Login" name="signup"></a>
+            <a href="./html/sign-up.html"><input type="button" value="Sign Up" name="signup"></a>
+            <a href="./html/login.html"><input type="button" value="Login" name="signup"></a>
         </div>
     </nav>
     <main id="main">
@@ -101,7 +101,7 @@
                     </li>
                     <li>
                         <p>Boost your focus with timed work sessions.</p>
-                        <a href="#">Promodoro</a>
+                        <a href="./html/404.html">Promodoro</a>
                     </li>
                     <li>
                         <p>Visualize your progress with daily, weekly, and monthly charts.</p>
