final touch for now

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <p>Task Pulse helps you manage your tasks, boost productivity, and achieve your goals with a simple yet
                     powerful task management platform. Whether you're organizing daily chores or planning long-term
                     projects, we've got you covered.</p>
-                <a href="#"><input type="button" value="Sign Up"></a>
+                <a href="./html/sign-up.html"><input type="button" value="Sign Up"></a>
             </section>
             <section class="highlights content">
                 <h3>Highlighted Features</h3>
